--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>Destiny matrix</title>
 	</head>
-	<body>
+	<body class="home">
 		<header>
 			<div class="container">
 				<nav class="nav-bar">
