--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<input
 										class="form-btn"
 										type="text"
-										placeholder="Date of Birth - Partner 1 *"
+										placeholder="Your name"
 									/>
 								</li>
 								<li class="grid-item4">
@@ -89,7 +89,7 @@
 									<input
 										class="form-btn"
 										type="text"
-										placeholder="Date of Birth - Partner 2 *"
+										placeholder="Date of Birth *"
 									/>
 								</li>
 								<li class="grid-item6">
